Fixed the problem with overlapping lines in the study abroad programs and the logo missing.

--- a/css/style.css
+++ b/css/style.css
@@ -3140,7 +3140,6 @@ body .theme-button-one:hover {
   color: #1e293b;
   font-size: 20px;
   font-weight: bold;
-  line-height: 0;
 }
 
 .course_tag {
